01/24/18: Starting assignment
01/28/18: Saves bianry file fo the dungeon
01/28/18: Reads the binary file but is slightly off
